# stake-pool

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  stake-pool-notes.md
.github/actions/setup/: action.yml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-js.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/src/: client.rs  main.rs  output.rs
clients/js-legacy/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js-legacy/src/: constants.ts  index.ts  instructions.ts
clients/js-legacy/test/: instructions.test.ts
clients/py/: optional-requirements.txt  requirements.txt
clients/py/bot/: rebalance.py
clients/py/spl_token/: actions.py
clients/py/stake/: actions.py  constants.py
clients/py/stake_pool/: actions.py  constants.py  state.py
clients/py/vote/: actions.py
program/: Cargo.toml  idl.json
program/src/: big_vec.rs  entrypoint.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: create_pool_token_metadata.rs  decrease.rs  deposit.rs  deposit_authority.rs  deposit_edge_cases.rs  deposit_sol.rs  force_destake.rs  huge_pool.rs  increase.rs  initialize.rs  preferred_validators.rs  realloc_validator_list.rs  set_deposit_fee.rs  set_epoch_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred.rs  set_referral_fee.rs  set_staker.rs  set_withdrawal_fee.rs  update_pool_token_metadata.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  update_validator_list_balance_hijack.rs  vsa_add.rs  vsa_remove.rs  withdraw.rs  withdraw_edge_cases.rs  withdraw_sol.rs  withdraw_with_fee.rs
program/tests/helpers/: mod.rs
scripts/: brasa-metadata.json  create-or-update-token-metadata.js  restart-test-validator.sh
scripts/client/: publish-js.mjs
stake-pool-idl/: Anchor.toml  package-lock.json
stake-pool-idl/programs/stake-pool-idl/: Cargo.toml
stake-pool-idl/programs/stake-pool-idl/src/: lib.rs
stake-pool-idl/tests/: stake-pool-idl.ts
static/: brasa-metadata.json
