[package]
name = "spl-stake-pool-cli"
version = "2.0.1"
description = "SPL-Stake-Pool Command-line Utility"
homepage = "https://www.solana-program.com/docs/stake-pool"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake-pool"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = "2.33.3"
serde = "1.0.219"
solana-account-decoder = "3.0.0"
solana-clap-utils = "3.0.0"
solana-cli-config = "3.0.0"
solana-cli-output = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-client = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-commitment-config = "3.0.0"
solana-logger = "3.0.0"
solana-message = "3.0.0"
solana-program = "4.0.0"
solana-remote-wallet = "3.0.0"
solana-sdk = "3.0.0"
solana-stake-interface = { version = "2", features = ["bincode"] }
solana-system-interface = { version = "3", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-stake-pool = { version = "=2.0.3", path = "../../program", features = [
  "no-entrypoint",
] }
spl-token-interface = "2.0"
spl-token = { version = "9.0", features = [
  "no-entrypoint",
] }
spl-token-2022-interface = "2.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
